# Garcia_Carlos_ExamenCPP3

./: CMakeLists.txt  README.md
modificado/: Lanzador.h  main.cpp
modificado/Clases/: Trabajador.cpp  Trabajador.h  TrabajadorType.h  Worker.cpp  Worker.h
modificado/crud/: CRUD.h
modificado/tarea/: Tarea.cpp  Tarea.h
original/: main.cpp
original/eje/: Funciones.cpp
